--- a/team.html
+++ b/team.html
@@ -81,8 +81,8 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Sourav Kumar Nanda</h5>
-                            <p class="text-faded">Founder & 
-                                <br />Executive Director</p>
+                             <!--  <p class="text-faded">Founder & 
+                                <br />Executive Director</p> -->
                         </div>
                     </div>
                 </div>
@@ -96,82 +96,23 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Sk Ayaz</h5>
-                            <p class="text-faded">Design Lead &
-                                <br />Director</p>
+                              <!--  <p class="text-faded">Design Lead &
+                                <br />Director</p> -->
                         </div>
                     </div>
                 </div>
             </a>
         </div>
-
-        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in//" target="_blank">
-                <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/Team/danish.jpg" alt="Nirmal Hota">
-                    <div class="speaker-card-body">
-                        <div class="speaker-card-header">
-                            <h5>Dayanullah Khan</h5>
-                            <p class="text-faded">Logistics Head
-                                <br /></p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
-                <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/surya.jpg" alt="Surya Narayan Barik">
-                    <div class="speaker-card-body">
-                        <div class="speaker-card-header">
-                            <h5>Surya Narayan Barik</h5>
-                            <p class="text-faded">R&D Dept.
-                                <br />ProcessMap</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in/karan-shaw/" target="_blank">
-                <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/Team/ashish.jpg" alt="Karan Shaw">
-                    <div class="speaker-card-body">
-                        <div class="speaker-card-header">
-                            <h5>Ashish Kumar Sahoo</h5> 
-                            <p class="text-faded">Wed Dev &
-                                <br />Core Team</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in/taditdash/" target="_blank">
-                <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/Team/sahil.jpg" alt="Tadit Dash">
-                    <div class="speaker-card-body">
-                        <div class="speaker-card-header">
-                            <h5>Sahil Kumar Nanda</h5>
-                            <p class="text-faded">Logistics, Web
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
+        
         <div class="col-xl-2 col-md-4 col-sm-4 col-6">
             <a href="" target="_blank">
                 <div class="speaker-card">
                     <img class="speaker-card-img-top" src="img/Team/kamal.jpg" alt="Jayanti Mohapatra">
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
-                            <h5>Kamal Lochan Mohapatra</h5>
-                            <p class="text-faded">Outreach Head
-                                <br /></p>
+                            <h5>Kamal Patra</h5>
+                             <!--  <p class="text-faded">Outreach Head
+                                <br /></p>  -->
                         </div>
                     </div>
                 </div>
@@ -185,8 +126,8 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Tanmayee Mohanty</h5>
-                            <p class="text-faded">Marketing Head
-                                <br /></p>
+                              <!--  <p class="text-faded">Marketing Head
+                                <br /></p>  -->
                         </div>
                     </div>
                 </div>
@@ -194,29 +135,14 @@
         </div>
 
         <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in/priyabrata-pati/" target="_blank">
+            <a href="https://www.linkedin.com/in//" target="_blank">
                 <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/Team/debdutta.jpg" alt="Priyabrata Pati">
+                    <img class="speaker-card-img-top" src="img/Team/danish.jpg" alt="Nirmal Hota">
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
-                            <h5>Debadutta Pattanaik</h5>
-                            <p class="text-faded">Outreach &
-                                <br />Marketing</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-            <a href="https://www.linkedin.com/in/aftabalam8028/" target="_blank">
-                <div class="speaker-card">
-                    <img class="speaker-card-img-top" src="img/Team/sharukh.jpg" alt="Aftab Alam">
-                    <div class="speaker-card-body">
-                        <div class="speaker-card-header">
-                            <h5>Sharukh Alam</h5>
-                            <p class="text-faded">Web Dev 
-                                <br /></p>
+                            <h5>Dayanullah Khan</h5>
+                             <!--  <p class="text-faded">Logistics Head
+                                <br /></p> -->
                         </div>
                     </div>
                 </div>
@@ -230,8 +156,8 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Shivam Kumar</h5>
-                            <p class="text-faded">Content Team Lead
-                                <br />Tech Scout</p>
+                              <!-- <p class="text-faded">Content Team Lead
+                                <br />Tech Scout</p> -->
                         </div>
                     </div>
                 </div>
@@ -245,8 +171,52 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Sudhanshu Kumar</h5>
-                            <p class="text-faded">Content Team
-                                <br />Tech Scout</p>
+                              <!--  <p class="text-faded">Content Team
+                                <br />Tech Scout</p> -->
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/karan-shaw/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/Team/ashish.jpg" alt="Karan Shaw">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Ashish Kumar Sahoo</h5> 
+                            <!-- <p class="text-faded">Wed Dev &
+                                <br />Core Team</p> -->
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/taditdash/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/Team/sahil.jpg" alt="Tadit Dash">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Sahil Kumar Nanda</h5>
+                             <!-- <p class="text-faded">Logistics, Web -->
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/aftabalam8028/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/Team/sharukh.jpg" alt="Aftab Alam">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Sharukh Alam</h5>
+                             <!--  <p class="text-faded">Web Dev 
+                                <br /></p> -->
                         </div>
                     </div>
                 </div>
@@ -260,13 +230,30 @@
                     <div class="speaker-card-body">
                         <div class="speaker-card-header">
                             <h5>Raj Tiwari</h5>
-                            <p class="text-faded">Content Strategist
-                                <br /></p>
+                             <!--  <p class="text-faded">Content Strategist
+                                <br /></p> -->
                         </div>
                     </div>
                 </div>
             </a>
         </div>
+
+        
+        <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/surya.jpg" alt="Surya Narayan Barik">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Surya Narayan Barik</h5>
+                              <!--  <p class="text-faded">R&D Dept.
+                                <br />ProcessMap</p> -->
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
 
     </div>
 </section>
