--- a/team.html
+++ b/team.html
@@ -241,7 +241,7 @@
 </div>
 </section>
 
-<section id="advisors" class="bg-dark">
+<section id="advisors" class="bg-dark" style="padding-top: 5px;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -270,7 +270,7 @@
     </div>
 </section>
 
-<section id="faculty" class="bg-dark">
+<section id="faculty" class="bg-dark"  style="padding-top: 5px;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
