--- a/index.html
+++ b/index.html
@@ -463,15 +463,29 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="mb-4">FAQ</h2>
                     <div id="toggle" class="toggle-panel">
+                            <div class="card">
+                                    <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse1">
+                                        <a class="panel-title card-title text-black">
+                                            <h5 class="arrow display-5">
+                                               What is a Hackathon?
+                                            </h5>
+                                        </a>
+                                    </button>
+                                    <div id="collapse1" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
+                                        <p class="panel-text display-7 panel-body">
+                                                A hackathon is a weekend-long event where students come together to learn about the latest technologies and build innovative products.</p>
+        
+                                    </div>
+                                </div>
                         <div class="card">
-                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse1">
+                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse2">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
                                         Who can participate?
                                     </h5>
                                 </a>
                             </button>
-                            <div id="collapse1" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
+                            <div id="collapse2" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-One">
                                 <p class="panel-text display-7 panel-body">
                                     We encourage and welcome undergraduate students, recent graduates and also working professionals to join us. But the ratio of students particpants will be higher than professianls. We also highly encourage UX Designers to join us at UtkalHacks.</p>
 
@@ -479,14 +493,14 @@
                         </div>
 
                         <div class="card">
-                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse2">
+                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse3">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
                                         When will the applications close?
                                     </h5>
                                 </a>
                             </button>
-                            <div id="collapse2" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Two">
+                            <div id="collapse3" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Two">
                                 <p class="panel-text display-7 panel-body">
                                     Applications close on 15th January, 2020 at 12:00 am.
                                     <br />
@@ -494,14 +508,14 @@
                         </div>
 
                         <div class="card">
-                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse3">
+                            <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse4">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
                                         How does the application process work?
                                     </h5>
                                 </a>
                             </button>
-                            <div id="collapse3" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
+                            <div id="collapse4" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
                                 <p class="panel-text display-7 panel-body">
                                     To begin with, participants will have to make a quick submission of the problem that they are trying to solve through the online portal. You need to describe your problem and submit a short write up of the problem you're trying to solve, why you've picked that particular problem, is there any existing solutions etc. Basically we just want to make sure whether you clearly understand your problem statement or not. Please note, It's not an idea submission process, you just need to tell us what problem/pain point you are trying to solve. After that your profile along with the submissions will be evaluated and the top 30 teams will be shortlisted to attend the SprintDay and HackDay. </p>
                             </div>
