--- a/index.html
+++ b/index.html
@@ -511,13 +511,20 @@
                             <button class="card-header collapsed" data-toggle="collapse" role="button" href="#collapse4">
                                 <a class="panel-title card-title text-black">
                                     <h5 class="arrow display-5">
-                                        How does the application process work?
+                                        How does the registration process work?
                                     </h5>
                                 </a>
                             </button>
                             <div id="collapse4" class="panel-collapse card-body noScroll collapse" role="tabpanel" data-parent="accordion" aria-labelledby="FAQ-Three">
                                 <p class="panel-text display-7 panel-body">
-                                    To begin with, participants will have to make a quick submission of the problem that they are trying to solve through the online portal. You need to describe your problem and submit a short write up of the problem you're trying to solve, why you've picked that particular problem, is there any existing solutions etc. Basically we just want to make sure whether you clearly understand your problem statement or not. Please note, It's not an idea submission process, you just need to tell us what problem/pain point you are trying to solve. After that your profile along with the submissions will be evaluated and the top 30 teams will be shortlisted to attend the SprintDay and HackDay. </p>
+                                        Unlike all other hackathons, our registration process will be slightly different. But the entire process is very simple, just go to top and hit that <b>Apply With Devfolio</b> button. That's it.
+                                        Then you will be prompted to make a quick submission of the questionnaires mentioned below within the Devfolio platform. <br>
+                                        - What is the pain or problem that you're trying to solve? </br>
+                                        - Who's affected by the pain or problem? ( It's good to get some real data from the affected people. ) </br>
+                                        - Does this problem have a tendency to grow and why? </br>
+                                        - How you're going to approach the problem? </br>
+                                        - Do you have a team? If yes, then who are the team members? </br>
+                                        - Do you have any plans to continue building the project even after the hackathon? If yes, then what's your vision for future? </p> </br>
                             </div>
                         </div>
 
