--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
                                         - How you're going to approach the problem? </br>
                                         - Do you have a team? If yes, then who are the team members? </br>
                                         - Do you have any plans to continue building the project even after the hackathon? If yes, then what's your vision for future? </p> </br>
+                                        <b>Read more:</b> https://wiki.utkalhacks.tech/how-it-works/registration-process
                             </div>
                         </div>
 
