--- a/index.html
+++ b/index.html
@@ -524,8 +524,10 @@
                                         - Does this problem have a tendency to grow and why? </br>
                                         - How you're going to approach the problem? </br>
                                         - Do you have a team? If yes, then who are the team members? </br>
-                                        - Do you have any plans to continue building the project even after the hackathon? If yes, then what's your vision for future? </p> </br>
-                                        <b>Read more:</b> https://wiki.utkalhacks.tech/how-it-works/registration-process
+                                        - Do you have any plans to continue building the project even after the hackathon? If yes, then what's your vision for future? </br>
+                                        <b>Read more:</b> <a href="https://wiki.utkalhacks.tech/how-it-works/registration-process">https://wiki.utkalhacks.tech/how-it-works/registration-process</a>
+                                     </p> 
+                                       
                             </div>
                         </div>
 
