--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a delivery model that will truly transform their initiative.
                         The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</p>
                 </div>
+                <div class="col-lg-12 text-center">
+                        <a   href="https://wiki.utkalhacks.tech/introduction/philosophy" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold;">Read More</a>
+                        </div>
             </div>
             </div>
 
