--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         The problem is that the <b>organizers</b> running hackathons haven’t changed what is behind the curtain in the way of resources, methods, processes and tooling. Which is why half the time ideas fall off the side of the desk after an event.</p>
                 </div>
                 <div class="col-lg-12 text-center">
-                        <a   href="https://wiki.utkalhacks.tech/introduction/philosophy" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold;">Read More</a>
+                        <a href="https://wiki.utkalhacks.tech/introduction/philosophy" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold; font-size: 22px;">Read More</a>
                         </div>
             </div>
             </div>
@@ -239,7 +239,7 @@
                 After the final submission, your Devfolio profile along with the answers of the questionnaires will be evaluated and the top 30 teams will be shortlisted to attend the<a href="https://wiki.utkalhacks.tech/introduction/framework/sprintday" target="blank"> SprintDay</a> and <a href="https://wiki.utkalhacks.tech/introduction/framework/hackday" target="blank">HackDay. </a>
             </p>
             <div class="col-lg-12 text-center">
-            <a   href="https://wiki.utkalhacks.tech/how-it-works" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold;">Read More</a>
+            <a   href="https://wiki.utkalhacks.tech/how-it-works" target="blank" style="color: aliceblue;text-decoration: underline;font-weight: bold; font-size: 22px;">Read More</a>
             </div>
         </div>
     </section>
