--- a/team.html
+++ b/team.html
@@ -222,6 +222,21 @@
                 </div>
             </a>
         </div>
+
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
+                    <div class="speaker-card">
+                        <img class="speaker-card-img-top" src="img/Team/raj.jpg" alt="Sunny Batabyal">
+                        <div class="speaker-card-body">
+                            <div class="speaker-card-header">
+                                <h5>Raj Tiwari</h5>
+                                 <!--  <p class="text-faded">Content Strategist
+                                    <br /></p> -->
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
     </div>
 </div>
 </section>
