hack week image added

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="frameworksection d-block w-100">
-                                    <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png"
+                                    <img class="frameworksectionimg d-block w-100" src="./img/assests/hack week-01.png"
                                         alt="">
                                     <div class="frameworksectiontext">
                                         <a href="https://wiki.utkalhacks.tech/introduction/framework/hackweeks"
