pitch day added

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="frameworksection d-block w-100">
-                                    <img class="frameworksectionimg d-block w-100" src="./img/assests/Hack Day-01.png"
+                                    <img class="frameworksectionimg d-block w-100" src="./img/assests/pitch day-01.png"
                                         alt="">
                                     <div class="frameworksectiontext d-block w-100">
                                         <a href="https://wiki.utkalhacks.tech/introduction/framework/pitchday"
