custom text heading added

--- a/index.html
+++ b/index.html
@@ -285,9 +285,11 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
-                    <h2>Registration Process!</h2>
+                    <img class="customheading" src="./img/texts/registration-process.png">
+                    <!--<h2>Registration Process!</h2>-->
                 </div>
             </div>
+            <br>
             <p>
                 To begin with, participants will have to make a quick submission of some of the onboarding
                 questionnaires on the Devfolio platform. See the questionnaires <a
