--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
         <div class="container">
             <div class="row">
                 <div class="philo">
-                    <h2 class="section-heading text-center text-white">Today's Hackathon System is Broken!</h2>
+                    <img class="img-fluid" src="./img/texts/Hackathon System is Broken.png">
+                    
                     <p>Hackathons nowadays are just being bloated with vaporware due to the lack of time to work on the
                         problem statements, the lack of direction and objective.
                         Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a
@@ -285,7 +286,7 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
-                    <img class="customheading" src="./img/texts/registration-process.png">
+                    <img class="img-fluid" src="./img/texts/registration-process.png">
                     <!--<h2>Registration Process!</h2>-->
                 </div>
             </div>
