--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Past Speakers & Mentors</h2>
+                        <img class="img-fluid" src="./img/texts/speakers & Mentors.png">
+                    <!--<h2 class="section-heading">Our Past Speakers & Mentors</h2>-->
                 </div>
             </div>
         </div>
