all headers updated

--- a/index.html
+++ b/index.html
@@ -495,7 +495,11 @@
 
     <section id="sponsors" class="bg-primary">
         <div class="container text-center">
-            <h2 class="mb-5">Our Sponsors</h2>
+            <img class="img-fluid" src="./img/texts/our sponsors.png">
+            <!--<h2 class="mb-5">Our Sponsors</h2>-->
+            <br>
+            <br>
+            <br>
             <div class="row mb-5" id="sponsors-box">
             </div>
         </div>
@@ -516,8 +520,13 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
-                    <h2>Our Wiki</h2>
+                <img class="img-fluid" src="./img/texts/our-wiki.png">
+                <!--<h2>Our Wiki</h2>-->
+                <br>
+                <br>
+                <br>
                 </div>
+                
                 <p>There has been a lot of Hackathons happening all over the globe and especially in india it's being
                     skyrocketed. But the question is, do we truly impact the developer &
                     designer community? Do we have a strong purpose? Read our wiki to find all the nitty
@@ -536,7 +545,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="mb-4">FAQ</h2>
+                    <img class="img-fluid" src="./img/texts/FAQ.png">
+                    <!--<h2 class="mb-4">FAQ</h2>-->
+                    <br>
+                    <br>
                     <div id="toggle" class="toggle-panel">
                         <div class="card">
                             <button class="card-header collapsed" data-toggle="collapse" role="button"
@@ -948,7 +960,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h2 class="mb-4 text-center">VENUE</h2>
+                    <img class="img-fluid" src="./img/texts/venue.png">
+                    <!--<h2 class="mb-4 text-center">VENUE</h2>-->
                     <img src="img/Venue.jpg" class="rcc" alt="Ravenshaw Convention Center">
                     <p>Ravenshaw Convention Center</p>
                     <p class="text-faded mb-4">Ravenshaw University Campus Cuttack, Odisha 753003</p>
