--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
                 </ol>
                 <div class="container">
                     <div class="frameworkcontainer">
-                        <h2 class="section-heading text-white text-center">A New Framework for Hackathon!</h2>
+                        <img class="img-fluid" src="./img/texts/new framewok for hackathon.png">
+                        <!--<h2 class="section-heading text-white text-center">A New Framework for Hackathon!</h2>-->
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="frameworksection d-block w-100">
