--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
         <div class="container">
             <div class="row">
                 <div class="philo">
-                    <img class="img-fluid" src="./img/texts/Hackathon System is Broken.png">
-                    
+                    <img class="img-fluid" style="margin-left: 9.9rem;"
+                        src="./img/texts/Hackathon System is Broken.png">
+
                     <p>Hackathons nowadays are just being bloated with vaporware due to the lack of time to work on the
                         problem statements, the lack of direction and objective.
                         Participants tend to focus on the shiny thing, but they don’t necessarily follow that up with a
@@ -318,7 +319,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                        <img class="img-fluid" src="./img/texts/speakers & Mentors.png">
+                    <img class="img-fluid" src="./img/texts/speakers & Mentors.png">
                     <!--<h2 class="section-heading">Our Past Speakers & Mentors</h2>-->
                 </div>
             </div>
@@ -521,13 +522,13 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
-                <img class="img-fluid" src="./img/texts/our-wiki.png">
-                <!--<h2>Our Wiki</h2>-->
-                <br>
-                <br>
-                <br>
+                    <img class="img-fluid" src="./img/texts/our-wiki.png">
+                    <!--<h2>Our Wiki</h2>-->
+                    <br>
+                    <br>
+                    <br>
                 </div>
-                
+
                 <p>There has been a lot of Hackathons happening all over the globe and especially in india it's being
                     skyrocketed. But the question is, do we truly impact the developer &
                     designer community? Do we have a strong purpose? Read our wiki to find all the nitty
