--- a/index.html
+++ b/index.html
@@ -1041,10 +1041,10 @@
             <i class="fa fa-quote-right fa-3x right-quote" aria-hidden="true"></i>
         </div> -->
 
-    <!-- <div class="vk-moon-div">
+        <div class="vk-moon-div">
             <img src="img/assests//vikram lander.png" alt="" class="vk-img" style="width: 150px; height: 150px;">
             <img src="img/assests/moon-footer.png" alt="UtkalHacks Background" class="nw-moon">
-        </div> -->
+        </div>
 
 
 
