moon-footer added

--- a/index.html
+++ b/index.html
@@ -1042,11 +1042,18 @@
             <i class="fa fa-quote-right fa-3x right-quote" aria-hidden="true"></i>
         </div> -->
 
-        <div class="vk-moon-div">
-            <img src="img/assests//vikram lander.png" alt="" class="vk-img" style="width: 150px; height: 150px;">
-            <img src="img/assests/moon-footer.png" alt="UtkalHacks Background" class="nw-moon">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <i class="fa fa-quote-left quote-left"></i>
+                    <h1 class="quote-text"><span class="text-span">Codes</span> can fail, but <span
+                            class="text-span">Dreams</span>
+                        don’t</h1>
+                    <i class="fa fa-quote-right quote-right"></i>
+                </div>
+            </div>
         </div>
-
+        <img src="img/assests/website-footer.svg" alt="moon-footer">
 
 
 
