--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
             <div class="row d-flex align-items-center">
 
 
-                <div class="col-md-6 col-lg-2 text-center text-md-left footer-content">
+                <div class="col-md-6 col-lg-2 text-center text-md-left">
                     <h6 class="white-text">
                         <a href="code-of-conduct/index.html">Code of Conduct</a>
                     </h6>
@@ -994,7 +994,7 @@
                 <div class="col-lg-6 circle">
                     <div id='ripple'></div>
                 </div>
-                <div class="col-md-6 col-lg-4 text-center text-md-right footer-content">
+                <div class="col-md-6 col-lg-4 text-center text-md-right">
                     <!--Facebook-->
                     <a href="https://www.facebook.com/emishacommunity/" target="_blank" rel="noopener"
                         title="Emisha Facebook">
