Erased the extra white space

--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                 </div>
             </div>
         </div>
-        <img src="img/assests/website-footer.svg" alt="moon-footer">
+        <img src="img/assests/website-footer.svg" alt="moon-footer" style="padding-top: 0px;">
 
 
 
