--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
           iframe: true,
           width: "80%",
           height: "80%",
-          href: "http://www.sitepoint.com"
+          href: "https://souravinsights.github.io/HNY2020/"
         });
       }
 
