Diusabled outer click on the popup

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,8 @@
           iframe: true,
           width: "80%",
           height: "80%",
-          href: "https://souravinsights.github.io/HNY2020/"
+          href: "https://souravinsights.github.io/HNY2020/",
+          overlayClose: false
         });
       }
 
