--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <title>ColorBox demo</title>
     <link
       rel="stylesheet"
-      href="http://www.jacklmoore.com/colorbox/example1/colorbox.css"
+      href="https://github.com/EmishaCommunity/UtkalHacks-2.0/blob/master/colorbox.css"
     />
   </head>
   <body>
