--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <title>ColorBox demo</title>
     <link
       rel="stylesheet"
-      href="https://github.com/EmishaCommunity/UtkalHacks-2.0/blob/master/colorbox.css"
+      href="https://www.jacklmoore.com/colorbox/example1/colorbox.css"
     />
   </head>
   <body>
@@ -13,8 +13,8 @@
     <h2>This is some content</h2>
     <p>The popup will open in five seconds</p>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://www.jacklmoore.com/colorbox/jquery.colorbox.js"></script>
     <script>
       function openColorBox() {
         $.colorbox({
