--- a/popup.html
+++ b/popup.html
@@ -19,8 +19,9 @@
       function openColorBox() {
         $.colorbox({
           iframe: true,
-          width: "80%",
-          height: "80%",
+          innerWidth: 430,
+          innerHeight: 370,
+          scrolling: false,
           href: "https://souravinsights.github.io/HNY2020/",
           overlayClose: false
         });
