--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,8 @@
           innerWidth: 630,
           innerHeight: 570,
           scrolling: false,
-          href: "https://souravinsights.github.io/HNY2020/",
-          overlayClose: false
+          href: "https://souravinsights.github.io/HNY2020/"
+          /*overlayClose: false*/
         });
       }
 
