--- a/index.html
+++ b/index.html
@@ -1474,8 +1474,7 @@
           function openColorBox() {
             $.colorbox({
               iframe: true,
-              innerWidth: 630,
-              innerHeight: 570,
+              innerWidth: 430, innerHeight: 370,
               scrolling: false,
               href: "https://souravinsights.github.io/HNY2020/"
               /*overlayClose: false*/
