chandryaan earth added

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
 
     <!--How it works-->
     <section id="howitworks" class="bg-primary">
+    <img class="bg-01" src="./img/assests/ch-round the earth-01.svg">
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
