lunar round the moon image added

--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
+                    <img class="bg-02" src="./img/assests/lunar-round-moon.png">
                     <img class="img-fluid" src="./img/texts/our-wiki.png">
                     <!--<h2>Our Wiki</h2>-->
                     <br>
