earth svg added

--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
     </section>
 
     <!--How it works-->
-    <section id="howitworks" class="bg-primary">
-    <img class="bg-01" src="./img/assests/ch-round the earth-01.svg">
+    <section id="howitworks" class="bg-primary"  > 
+    
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <br>
-            <p>
+            <p >
                 To begin with, participants will have to make a quick submission of some of the onboarding
                 questionnaires on the Devfolio platform. See the questionnaires <a
                     href="https://wiki.utkalhacks.tech/how-it-works/registration-process" target="blank">here. </a>
@@ -318,6 +318,7 @@
                     More</a>
             </div>
         </div>
+        <img class="bg-01" src="./img/assests/ch-round the earth-01.svg" alt="">
     </section>
 
     <section id="speakers" class="bg-dark">
