--- a/index.html
+++ b/index.html
@@ -1474,8 +1474,8 @@
           function openColorBox() {
             $.colorbox({
               iframe: true,
-              innerWidth: 430, innerHeight: 370,
-              scrolling: false,
+              maxWidth:'95%', maxHeight:'95%',
+            
               href: "https://souravinsights.github.io/HNY2020/"
               /*overlayClose: false*/
             });
