Revert "Update index.html"
This reverts commit 05238346e479a2c347ec8e39ad53e6fb592d2ef7.

--- a/index.html
+++ b/index.html
@@ -1476,8 +1476,8 @@
           function openColorBox() {
             $.colorbox({
               iframe: true,
-              maxWidth:'95%', maxHeight:'95%',
-            
+              innerWidth: 430, innerHeight: 370,
+              scrolling: false,
               href: "https://souravinsights.github.io/HNY2020/"
               /*overlayClose: false*/
             });
