changed earth svg position

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </div>
         <img class="bg-01" src="./img/assests/ch-round the earth-01.svg" alt="">
     </section>
-
+    <img class="bg-01" src="./img/assests/ch-round the earth-01.svg" alt="">
     <section id="speakers" class="bg-dark">
 
         <div class="container">
