--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     </section>
 
     <!--SCHEDULE-->
-    <section id="schedule" class="schedule-box">
+    <<!--section id="schedule" class="schedule-box">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-3">
@@ -526,9 +526,9 @@
 
         <div class="tab-content text-center schedule-details">
           <div role="tabpanel" class="tab-pane active show" id="workshop">
-            <div class="col-lg-12">
+            <div class="col-lg-12">-->
               <!-- DAY 1 -->
-              <div id="day-1" class="schedule-day">
+              <!--<div id="day-1" class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -791,10 +791,10 @@
             </div>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="hackday1">
-            <div class="col-lg-12 schedule-row">
+            <div class="col-lg-12 schedule-row">-->
 
               <!-- DAY 2 -->
-              <div class="schedule-day">
+             <!-- <div class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -827,7 +827,7 @@
                         <strong>10:00 AM</strong>
                       </td>
                       <td>Team Formation &amp; Hacking Begins</td>
-                    </tr>
+                    </tr>-->
 
                     <!-- <tr>
                       <td>
@@ -838,7 +838,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <tr>
+                   <!-- <tr>
                       <td>
                         <p class="schedule-time noon"></p>
                       </td>
@@ -899,7 +899,7 @@
                         </strong>
                       </td>
                       <td>Dinner</td>
-                    </tr>
+                    </tr>-->
 
                     <!-- <tr>
                       <td>
@@ -909,7 +909,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <tr>
+                   <!-- <tr>
                       <td>
                         <p class="schedule-time night"></p>
                       </td>
@@ -929,9 +929,9 @@
             </div>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="hackday2">
-            <div class="col-lg-12 schedule-row">
+            <div class="col-lg-12 schedule-row">-->
               <!-- DAY 3 -->
-              <div class="schedule-day">
+             <!-- <div class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -958,7 +958,7 @@
                         </strong>
                       </td>
                       <td>Panel Discussion</td>
-                    </tr>
+                    </tr>-->
 
                     <!-- <tr>
                       <td>
@@ -968,7 +968,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <tr>
+                    <!--<tr>
                       <td>
                         <p class="schedule-time noon"></p>
                       </td>
@@ -978,7 +978,7 @@
                         </strong>
                       </td>
                       <td>Lunch</td>
-                    </tr>
+                    </tr>-->
 
                     <!-- <tr>
                       <td>
@@ -988,7 +988,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <tr>
+                  <!--  <tr>
                       <td>
                         <p class="schedule-time evening"></p>
                       </td>
@@ -1044,7 +1044,7 @@
       </div>
     </div>
     
-  </section>
+  </section>-->
   <!--SPONSER-->
    <section id="sponsors" class="bg-primary">
         <div class="container text-center">
