--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     </section>
 
     <!--SCHEDULE-->
-    <<!--section id="schedule" class="schedule-box">
+    <section id="schedule" class="schedule-box">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-3">
@@ -519,9 +519,9 @@
 
         <div class="tab-content text-center schedule-details">
           <div role="tabpanel" class="tab-pane active show" id="workshop">
-            <div class="col-lg-12">-->
+            <div class="col-lg-12">
               <!-- DAY 1 -->
-              <!--<div id="day-1" class="schedule-day">
+              <div id="day-1" class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -784,10 +784,10 @@
             </div>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="hackday1">
-            <div class="col-lg-12 schedule-row">-->
+            <div class="col-lg-12 schedule-row">
 
               <!-- DAY 2 -->
-             <!-- <div class="schedule-day">
+              <div class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -820,7 +820,7 @@
                         <strong>10:00 AM</strong>
                       </td>
                       <td>Team Formation &amp; Hacking Begins</td>
-                    </tr>-->
+                    </tr>
 
                     <!-- <tr>
                       <td>
@@ -831,7 +831,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                   <!-- <tr>
+                    <tr>
                       <td>
                         <p class="schedule-time noon"></p>
                       </td>
@@ -892,7 +892,7 @@
                         </strong>
                       </td>
                       <td>Dinner</td>
-                    </tr>-->
+                    </tr>
 
                     <!-- <tr>
                       <td>
@@ -902,7 +902,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                   <!-- <tr>
+                    <tr>
                       <td>
                         <p class="schedule-time night"></p>
                       </td>
@@ -922,9 +922,9 @@
             </div>
           </div>
           <div role="tabpanel" class="tab-pane fade" id="hackday2">
-            <div class="col-lg-12 schedule-row">-->
+            <div class="col-lg-12 schedule-row">
               <!-- DAY 3 -->
-             <!-- <div class="schedule-day">
+              <div class="schedule-day">
 
                 <table class="table table-schedule">
                   <tbody>
@@ -951,7 +951,7 @@
                         </strong>
                       </td>
                       <td>Panel Discussion</td>
-                    </tr>-->
+                    </tr>
 
                     <!-- <tr>
                       <td>
@@ -961,7 +961,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                    <!--<tr>
+                    <tr>
                       <td>
                         <p class="schedule-time noon"></p>
                       </td>
@@ -971,7 +971,7 @@
                         </strong>
                       </td>
                       <td>Lunch</td>
-                    </tr>-->
+                    </tr>
 
                     <!-- <tr>
                       <td>
@@ -981,7 +981,7 @@
                       <td>Hacking Continues</td>
                     </tr> -->
 
-                  <!--  <tr>
+                    <tr>
                       <td>
                         <p class="schedule-time evening"></p>
                       </td>
@@ -1037,7 +1037,7 @@
       </div>
     </div>
     
-  </section>-->
+  </section>
   <!--SPONSER-->
    <section id="sponsors" class="bg-primary">
         <div class="container text-center">
