--- a/index.html
+++ b/index.html
@@ -319,7 +319,561 @@
             </div>
         </div>
     </section>
+    <!--SCHEDULE-->
+    <section id="schedule" class="schedule-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center mb-3">
+          <h2>Schedule</h2>
 
+          <ul class="nav nav-pills text-center mt-5" role="tablist" data-tabs="tabs">
+            <li class="nav-item">
+              <a href="#workshop" class="nav-link " data-toggle="tab" role="tab"> JANUARY 31 , 2020</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#hackday1" role="tab">FEBRUARY 1 , 2020</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#hackday2" role="tab">FEBRUARY 2 , 2020</a>
+            </li>
+          </ul>
+
+        </div>
+
+        <div class="tab-content text-center schedule-details">
+          <div role="tabpanel" class="tab-pane active show" id="workshop">
+            <div class="col-lg-12">
+              <!-- DAY 1 -->
+              <div id="day-1" class="schedule-day">
+
+                <table class="table table-schedule">
+                  <tbody>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>8:00 AM</strong>
+                      </td>
+                      <td>
+                        Check-In and Breakfast
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>9:00 AM</strong>
+                      </td>
+                      <td>
+                        Opening Ceremony
+                        <!--<div class="subtitle">ETHGlobal &amp; ETHIndia Team + Our Sponsors</div>
+                        <p style="font-size: 0.9rem;margin:0;line-height: 24px;color:inherit">NuCypher, Maker, Status, Dharma, Lendroid, ECF, ConsenSys, Gitcoin, Matic, Quantstamp, Web3 &amp; Bounties
+                          Network </p>-->
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>9:30 AM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">Workshop</div>-->
+                        <br> Talks and Workshops
+                       <!--- <div class="subtitle">by Kayvon Tehranian</div>-->
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>1:30 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">talk</div>-->
+                        <br>Lunch
+                        <!--<div class="subtitle">by Nadav Hollander</div>-->
+                      </td>
+                    </tr>
+
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>2:00 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">talk</div>-->
+                        <br>Talks and Workshops Continues..
+                        <!--<div class="subtitle">by Sean Brennan</div>-->
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>5:00 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">talk</div>-->
+                        <br> Coffee and Snacks
+                        <!--<div class="subtitle">by Dr. Michael Egorov</div>-->
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>5:30 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">workshop</div>-->
+                        <br>Design Sprint Workshop
+                        <!--<div class="subtitle">by Andy Tudhope</div>-->
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>7:00 PM</strong>
+                      </td>
+                      <td>
+                        SprintDay Starts
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>9:00 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">talk</div>-->
+                        <br>Dinner
+                        <!--<div class="subtitle">by Jack Platts</div>-->
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>9:30 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">workshop</div>-->
+                        <br> SprintDay Continues..
+                        <!--<div class="subtitle">by Sean Brennan</div>-->
+                      </td>
+                    </tr>
+
+                    <!--<tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>3:15 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">talk</div>
+                        <br> Virtual State Channels
+                        <div class="subtitle">by Arjun Bhuptani</div>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>3:45 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">workshop</div>
+                        <br> Building end-to-end encrypted decentralized applications using NuCypher network
+                        <div class="subtitle">by Dr. Michael Egorov</div>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>4:30 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">talk</div>
+                        <br> Collaboration and Collective Knowledge
+                        <div class="subtitle">by Andy Tudhope</div>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>5:00 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">talk</div>
+                        <br> Meta Analysis of Consensus Protocols
+                        <div class="subtitle">by Aparna Krishnan</div>
+                      </td>
+                    </tr>
+
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>5:30 PM</strong>
+                      </td>
+                      <td>
+                        Tea Break
+                      </td>
+                    </tr>
+
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>6:00 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">talk</div>
+                        <br> Revolutionising Lending on the Blockchain
+                        <div class="subtitle">by Vii Sundaram</div>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>6:30 PM</strong>
+                      </td>
+                      <td>
+                        <div class="tag">talk</div>
+                        <br> DFINITY &amp; The Road to Randomness
+                        <div class="subtitle">by Arthur Falls</div>
+                      </td>
+                    </tr>
+
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>7:00 PM</strong>
+                      </td>
+                      <td>Closing &amp; High-Tea</td>
+                    </tr>-->
+
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="hackday1">
+            <div class="col-lg-12 schedule-row">
+
+              <!-- DAY 2 -->
+              <div class="schedule-day">
+
+                <table class="table table-schedule">
+                  <tbody>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>2:00 AM</strong>
+                      </td>
+                      <td>Midnight Snacks & Break </td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>8:00 AM</strong>
+                      </td>
+                      <td>Breakfast</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>8:30 AM</strong>
+                      </td>
+                      <td>Sprintday Continues..</td>
+                    </tr>
+
+                    <!-- <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                      </td>
+                      <td>Hacking Continues</td>
+                    </tr> -->
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          12:00 PM
+                        </strong>
+                      </td>
+                      <td>Hackathon Begins</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>1:00 PM</strong>
+                      </td>
+                      <td>
+                        <!--<div class="tag">talk</div>-->
+                        <br>Lunch
+                        <!--<div class="subtitle">by Augusto Lemble</div>-->
+                      </td>
+                    </tr>
+
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          2:30 PM
+                        </strong>
+                      </td>
+                      <td> Hackathon Continues</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          5:30 PM
+                        </strong>
+                      </td>
+                      <td>Coffee & Snacks</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          6:00 PM
+                        </strong>
+                      </td>
+                      <td>Hackathon Continues..</td>
+                    </tr>
+
+                    <!-- <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td></td>
+                      <td>Hacking Continues</td>
+                    </tr> -->
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          9:00 PM
+                        </strong>
+                      </td>
+                      <td>Dinner</td>
+                    </tr>
+                     <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          10:00 PM
+                        </strong>
+                      </td>
+                      <td>Hackathon Continues..</td>
+                    </tr>
+
+
+                  </tbody>
+                </table>
+              </div>
+
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="hackday2">
+            <div class="col-lg-12 schedule-row">
+              <!-- DAY 3 -->
+              <div class="schedule-day">
+
+                <table class="table table-schedule">
+                  <tbody>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          2:00 AM
+                        </strong>
+                      </td>
+                      <td>Midnight Snacks & Coffee</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          8:00 AM
+                        </strong>
+                      </td>
+                      <td>Breakfast</td>
+                    </tr>
+
+                    <!-- <tr>
+                      <td>
+                        <p class="schedule-time morning"></p>
+                      </td>
+                      <td></td>
+                      <td>Hacking Continues</td>
+                    </tr> -->
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          8:30 AM
+                        </strong>
+                      </td>
+                      <td>Hackathon Continues..</td>
+                    </tr>
+
+                    <!-- <tr>
+                      <td>
+                        <p class="schedule-time noon"></p>
+                      </td>
+                      <td></td>
+                      <td>Hacking Continues</td>
+                    </tr> -->
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>1:30 PM</strong>
+                      </td>
+                      <td>Lunch</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time evening"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          4:00 PM
+                        </strong>
+                      </td>
+                      <td>Evaluation starts</td>
+                    </tr>
+
+                    <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          6:30 PM
+                        </strong>
+                      </td>
+                      <td>Result Declaration</td>
+                    </tr>
+
+                   <!--- <tr>
+                      <td>
+                        <p class="schedule-time night"></p>
+                      </td>
+                      <td>
+                        <strong>
+                          10:00 PM
+                        </strong>
+                      </td>
+                      <td>Goodbye!</td>
+                    </tr>-->
+
+                  </tbody>
+                </table>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </section>
+
+<!--SPEAKER-->
     <section id="speakers" class="bg-dark">
 
         <div class="container">
