--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </header>
 
-    <section id="about" class="bg-dark">
+    <section id="about" class="bg-dark grd-1">
         <div class="container">
             <div class="row">
                 <div class="philo">
@@ -289,7 +289,7 @@
     </section>
 
     <!--How it works-->
-    <section id="howitworks" class="bg-primary">
+    <section id="howitworks" class="grd-2">
     <img class="bg-01" src="./img/assests/ch-round the earth-01.svg">
         <div class="container">
             <div class="row">
@@ -320,7 +320,7 @@
         </div>
     </section>
     <!--SCHEDULE-->
-    <section id="schedule" class="schedule-box">
+    <section id="schedule" class="schedule-box grd-3">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-3">
@@ -874,7 +874,7 @@
   </section>
 
 <!--SPEAKER-->
-    <section id="speakers" class="bg-dark">
+    <section id="speakers" class="grd-11">
 
         <div class="container">
             <div class="row">
@@ -1055,7 +1055,7 @@
             </div>
     </section>
 
-    <section id="sponsors" class="bg-primary">
+    <section id="sponsors" class="grd-4">
         <div class="container text-center">
             <img class="img-fluid" src="./img/texts/our sponsors.png">
             <!--<h2 class="mb-5">Our Sponsors</h2>-->
@@ -1078,7 +1078,7 @@
     </section>
 
     <!--Wiki-->
-    <section id="wiki" class="bg-dark">
+    <section id="wiki" class="grd-5">
         <div class="container">
             <div class="row">
                 <div class="howitworks-title col-lg-12 text-center">
@@ -1103,7 +1103,7 @@
     </section>
 
     <!--FAQ-->
-    <section id="faq" class="faqs-box">
+    <section id="faq" class="faqs-box grd-6">
 
         <div class="container">
             <div class="row">
@@ -1519,7 +1519,7 @@
         </div>
     </section>
 
-    <section id="venue" class="bg-dark">
+    <section id="venue" style="background-image:linear-gradient(#020415, #020415)">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
@@ -1540,7 +1540,7 @@
 
 
 
-    <section class="footer">
+    <section class="footer grd-8">
 
         <div class="container">
             <div class="row d-flex align-items-center">
@@ -1602,7 +1602,7 @@
             <i class="fa fa-quote-right fa-3x right-quote" aria-hidden="true"></i>
         </div> -->
 
-        <div class="container">
+        <div class="container grd-9">
             <div class="row">
                 <div class="col-lg-12">
                     <i class="fa fa-quote-left quote-left"></i>
@@ -1613,7 +1613,10 @@
                 </div>
             </div>
         </div>
-        <img src="img/assests/website-footer.svg" alt="moon-footer" style="padding-top: 0px;">
+        <div class="grd-10">
+          <img src="img/assests/website-footer.svg" alt="moon-footer" style="padding-top: 0px;">
+        </div>
+        
 
 
 
