--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 </div>
                 <div class="col-lg-12 mt-3">
                     <p class="text-faded" style="line-height: 1.8;">
-                        <h5>It's Not Just a Hackathon
-                            <br>UtkalHacks | 31st January - 2nd February, 2020
+                        <h5>It's not Just a Hackathon
+                          <br><h9  class="date-location-text"><i class="fas fa-map-marker-alt" style="padding: 2px;"></i> Ravenshaw University |<i class="fas fa-calendar-alt" style="padding: 10px;"></i>31st January - 2nd February, 2020 </h9> 
                         </h5>
                 </div>
                 <div class="col-lg-12" style="margin-top: 2.5rem !important">
