--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-3">
-          <h2>Schedule</h2>
+          <img class="img-fluid" src="./img/texts/schedule.png">
+          <!--<h2>Schedule</h2>-->
 
           <ul class="nav nav-pills text-center mt-5" role="tablist" data-tabs="tabs">
             <li class="nav-item">
